--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ hasCJKLanguage = true
 
 [params]
     author = "Masaru Kojo"
-    avatar = "avatar.jpeg"
+    avatar = "avatar.png"
     favicon = "favicon.ico"
     publicationYear = "2020"
 
