Change baseUrl to custom domain

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://kojoma.github.io/"
+baseurl = "https://kojoma.me/"
 languageCode = "en-us"
 title = "Masaru Kojo"
 theme = "pulp"
